--- a/PyTorch/Autograd.ipynb
+++ b/PyTorch/Autograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMP3bsu/PzQOxqFnl018kvp",
+      "authorship_tag": "ABX9TyNS/VDI8y4uXcV1kbwKStR1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +77,7 @@
         "id": "nOiuktQ8SrjJ",
         "outputId": "78234d40-3baf-433f-daba-eaa1397dbbf0"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "mgAkhzcxTF7X"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "tSbmnE-VUe38"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
       "metadata": {
         "id": "1aiY4MyjUkLg"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "1mPEnkfjUn0T"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -148,7 +148,7 @@
         },
         "outputId": "547d2e00-d36e-4118-f1a0-f3c700ae7419"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +172,7 @@
       "metadata": {
         "id": "Bqkih5PWWzJp"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -183,7 +183,7 @@
       "metadata": {
         "id": "DuSEWMeMY9bo"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -195,7 +195,7 @@
       "metadata": {
         "id": "FzsTmQu2Y9le"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
         "id": "huE0owIZY9rJ",
         "outputId": "6f4ed181-322c-4ead-8fe9-638bf1aadb08"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -236,7 +236,7 @@
         "id": "L6idYcwmY9wI",
         "outputId": "a332f5eb-6a8a-4c72-f629-540e41c9961d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -262,7 +262,7 @@
         "id": "f6vxQZGxY906",
         "outputId": "3350a275-5884-46fc-cf68-ef07c1557d16"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +284,7 @@
       "metadata": {
         "id": "34GNacWtY94_"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
       "metadata": {
         "id": "nTPD2zbvY988"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -317,7 +317,7 @@
         "id": "vzeYaP9GY-AY",
         "outputId": "be5925c0-b883-43f8-b66b-681441cbcae0"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,7 +343,7 @@
       "metadata": {
         "id": "G7kmTHOnY-Ds"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -354,7 +354,7 @@
       "metadata": {
         "id": "yq7-s32QY-HG"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,12 +366,14 @@
       "metadata": {
         "id": "kmGezkvKY-KM"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(\"update 1\")"
+      ],
       "metadata": {
         "id": "uJQ_rNtLY-Nl"
       },
@@ -408,7 +410,7 @@
         "id": "7WHEeXx0Y-XV",
         "outputId": "9bf7f0dd-1b82-4aee-c4f2-2205919c0243"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
